fixed four col title centered on mobile

--- a/assets/scss/parts/_four-col.scss
+++ b/assets/scss/parts/_four-col.scss
@@ -63,5 +63,9 @@
     .text p {
       font-size: rem(18);
     }
+
+    h6 {
+      font-size: rem(18);
+    }
   }
 }
